# c-dsl

./: .gitignore  .hgignore  README.markdown  c-dsl.cabal  c-dsl.nix  default.nix
example/: SimpleFunction.hs  SimpleStatements.hs
src/Language/C/: DSL.hs
src/Language/C/DSL/: Decl.hs  Exp.hs  Stat.hs  StringLike.hs
